--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="content">
             <header>
                 <h2>主催</h2>
-                <p></p>
+                <p>content</p>
             </header>
             <div class="box">
                 
