--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="intro" class="main style1 dark fullscreen">
         <div class="content">
             
-            <h2>CodePBL</h2>
+            <h2 id="pbl_title">CodePBL</h2>
             <div class="logo_box">
                 <img src="images/rezero_engineer.png" class="logo" title="ReZeroLogo" alt="" />
             </div>
