フッター修正 ヘッダーのメニュー名変更 各セクション名変更

--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
         <h1>CodePBL</h1>
         <nav>
             <ul>
-                <li><a href="#intro">Intro</a></li>
-                <li><a href="#one">What I Do</a></li>
-                <li><a href="#two">Who I Am</a></li>
-                <li><a href="#work">My Work</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#intro">Re:ゼロから始めるエンジニア生活</a></li>
+                <li><a href="#one">説明会の日程・場所</a></li>
+                <li><a href="#two">参加登録</a></li>
+                <li><a href="#three">メディア掲載</a></li>
+                <li><a href="#work">前回の様子</a></li>
+                <li><a href="#contact">主催</a></li>
             </ul>
         </nav>
     </header>
@@ -53,7 +54,7 @@
     <section id="one" class="main style2 right dark fullscreen">
         <div class="content box style2">
             <header>
-                <h2>講義の一歩先へ</h2>
+                <h2>説明会の日程・場所</h2>
             </header>
             <p>
                 講義でプログラミングをしただけの
@@ -67,7 +68,7 @@
     <section id="two" class="main style2 left dark fullscreen">
         <div class="content box style2">
             <header>
-                <h2>チーム開発</h2>
+                <h2>参加登録</h2>
             </header>
             <p>
                 数人でのチーム開発を行います。
@@ -79,7 +80,7 @@
     <section id="three" class="main style2 right dark fullscreen">
         <div class="content box style2">
             <header>
-                <h2>成果発表会</h2>
+                <h2>メディア掲載</h2>
             </header>
             <p>
                 企業の方を招いた成果発表会を行います。
@@ -140,17 +141,19 @@
 
         <!-- Icons -->
         <ul class="actions">
-            <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+            <li><a href="https://twitter.com/code_pbl" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+            <!--  
             <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
             <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
             <li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
             <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
             <li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
+            -->
         </ul>
 
         <!-- Menu -->
         <ul class="menu">
-            <li>&copy; Untitled</li>
+            <li>&copy; 2017</li>
             <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
         </ul>
 
