--- a/index.html
+++ b/index.html
@@ -161,22 +161,22 @@
             <!-- Gallery  -->
             <div class="gallery">
                 <article class="from-left">
-                    <a href="images/fulls/01.jpg" class="image fit"><img src="images/prize1.jpg" title="The Anonymous Red" alt="" /></a>
+                    <a href="images/prize1.jpg" class="image fit"><img src="images/prize1.jpg" title="スローガン賞" alt="" /></a>
                 </article>
                 <article class="from-right">
-                    <a href="images/fulls/02.jpg" class="image fit"><img src="images/prize2.jpg" title="Airchitecture II" alt="" /></a>
+                    <a href="images/prize2.jpg" class="image fit"><img src="images/prize2.jpg" title="ハートビーツ賞" alt="" /></a>
                 </article>
                 <article class="from-left">
-                    <a href="images/fulls/03.jpg" class="image fit"><img src="images/prize3.jpg" title="Air Lounge" alt="" /></a>
+                    <a href="images/prize3.jpg" class="image fit"><img src="images/prize3.jpg" title="フューチャーアーキテクト賞" alt="" /></a>
                 </article>
                 <article class="from-right">
-                    <a href="images/fulls/04.jpg" class="image fit"><img src="images/prize4.jpg" title="Carry on" alt="" /></a>
+                    <a href="images/prize4.jpg" class="image fit"><img src="images/prize4.jpg" title="ブランディングエンジニア賞" alt="" /></a>
                 </article>
                 <article class="from-left">
-                    <a href="images/fulls/05.jpg" class="image fit"><img src="images/prize5.jpg" title="The sparkling shell" alt="" /></a>
+                    <a href="images/prize5.jpg" class="image fit"><img src="images/prize5.jpg" title="努力賞" alt="" /></a>
                 </article>
                 <article class="from-right">
-                    <a href="images/fulls/06.jpg" class="image fit"><img src="images/prize6.jpg" title="Bent IX" alt="" /></a>
+                    <a href="images/prize6.jpg" class="image fit"><img src="images/prize6.jpg" title="優秀賞" alt="" /></a>
                 </article>
             </div>
 
