色をちょくちょく変えました

--- a/index.html
+++ b/index.html
@@ -78,6 +78,20 @@
         </div>
     </section>
     
+     <!-- presen -->
+    <section id="presen" class="main style2 right dark fullscreen">
+        <div class="content box style2">
+            <header>
+                <h2>成果発表会</h2>
+            </header>
+            <p>
+                企業の方を招いた成果発表会を行います。<br>
+                仲間たちと作り上げた作品をアピールし、<br>
+                現役のエンジニアたちからフィードバックをもらおう。
+            </p>
+        </div>
+    </section>
+    
     <section id="schedule" class="main style2 dark fullscreen">
         <div class="content box style2">
             <header>
