画像のポップアップできないように変更（運営）

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <!-- <div class="box"> -->
             <div class="gallery">
                 <article class="left">
-                    <a href="images/redimpulz2.jpg" class="image fit"><img src="images/redimpulz2.JPG" title="レッドインパルス" alt="" /></a>
+                    <img class="image fit"src="images/redimpulz2.JPG" title="レッドインパルス" alt="" />
                     <h2 class="unei_name">レッドインパルス</h2>
                     <p>
                         
@@ -218,7 +218,7 @@
                     </p>
                 </article>
                 <article class="right">
-                    <a href="images/ishi.jpg" class="image fit"><img src="images/ishi.jpg" title="石井　将文" alt="" /></a>
+                    <img class="image fit" src="images/ishi.jpg" title="石井　将文" alt="" />
                     <h2 class="unei_name">石井　将文</h2>
                     <p>
                         ふみコード 代表兼忍者プログラマ
