Change the picture of ishii

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     </p>
                 </article>
                 <article class="right">
-                    <img class="image fit" src="images/ishi.jpg" title="石井　将文" alt="" />
+                    <img class="image fit" src="images/masa_icon.jpg" title="石井　将文" alt="" />
                     <h2 class="unei_name">石井　将文</h2>
                     <p>
                         ふみコード 代表兼忍者プログラマ
