Deploy test codepbl.com

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <section id="schedule" class="main style2 dark fullscreen">
         <div class="content box style2">
             <header>
-                <h2>説明会の日程・場所</h2>
+                <h2>説明会の日程・場所(終了）</h2>
                 <h4>CodePBLに参加を希望される方はできる限り説明会に参加してください！</h4>
             </header>
             <p>
