登録フォームへのりんく、スライドを公開しました

--- a/index.html
+++ b/index.html
@@ -96,29 +96,15 @@
     <section id="schedule" class="main style2 dark fullscreen">
         <div class="content box style2">
             <header>
-                <h2>説明会の日程・場所(終了）</h2>
-                <h4>CodePBLに参加を希望される方はできる限り説明会に参加してください！</h4>
+                <h2>説明会について(終了）</h2>
+                <h4>全ての説明会は終了してしまいました…</h4>
             </header>
             <p>
-                2017年1月24日(火曜)<br>
-                12時20分〜 (B101)<br>
-                16時30分〜 (旧C201)
+                全6回の説明会は終了しました。<br>
+                ですがCodePBLへの参加はまだまだ受け付けてます！<br>
+                説明会で使用したスライド資料をアップロードしておりますので興味がある方は是非御覧ください！！
             </p>
-            <p>
-                2017年1月26日(木曜)<br>
-                12時20分〜 (B101)<br>
-                16時30分〜 (旧C103)
-            </p>
-            <p>
-                2017年2月9日(木曜)<br>
-                12時20分〜 (B101)<br>
-                16時30分〜 (旧C103)
-            </p>
-            <p>
-                途中参加も可能です。（参加人数を事前に把握したいので、可能であれば参加登録をお願いします）<br>
-                各回、約30分くらいを予定しています。<br>
-                内容は、基本的に同じです。
-            </p>
+            <iframe src="//www.slideshare.net/slideshow/embed_code/key/3CXEV2OLe1wEHn" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/ueccodepbl/briefing-of-code-pbl-72211646" title="Briefing of code pbl" target="_blank">Briefing of code pbl</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/ueccodepbl">ueccodepbl</a></strong> </div>
         </div>
     </section>
     
@@ -128,12 +114,12 @@
                 <h2>参加登録</h2>
             </header>
             <p>
-                参加登録をするために説明会に参加してください。<br>
-                説明会への参加はUEQareerのConnpassページから申し込むことができます。<br>
-                説明会への参加にConnpassへの登録は必須ではありません。
+                全ての説明会は終了してしまいましたが、登録はまだまだ募集しております！！<br>
+                現在20名以上の方に募集していただいてます！<br>
+                説明会に来て無くても登録は全然OK！！是非登録してくださいね！<br>
             </p>
             <div style="text-align:center;">
-              <a class="button" href="https://ueqareer.connpass.com/event/48562/">CONNPASS</a>
+              <a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLSf2BcGX1sz7cVJKAaec7laKL--3IKfPfyISd7OrScSawwnV-g/viewform?c=0&w=1">登録する！</a>
             </div>
         </div>
     </section>
