--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <section id="intro" class="main style1 dark fullscreen">
         <div class="content">
             <header>
-                <img src="images/CodePBLLogo.png" class="logo" alt="">
+                <img src="images/CodePBLLogo2.png" class="logo" alt="">
                 <div class="logo_box">
-                    <img src="images/engineer_friends.png" class="logo" title="ReZeroLogo" alt="" />
+                    <img src="images/engineer_friends2.png" class="logo" title="ReZeroLogo" alt="" />
                 </div>
 
             </header>
@@ -94,40 +94,7 @@
         </div>
     </section>
 
-    <!-- Sponsor -->
-    <section id="sponsor" class="main style3 primary">
-        <div class="content">
-            <header>
-                <h2>過去協賛企業</h2>
-                <p></p>
-            </header>
 
-            <!-- Icon  -->
-            <div class="row">
-                <div class="col-xs-12 col-sm-6">
-                    <div class="row">
-                        <div class="col-xs-6">
-                            <img class="image fit sponsor" src="images/sponsor-brandingengineer.png" title="株式会社Branding Engineer" />
-                        </div>
-                        <div class="col-xs-6">
-                            <img class="image fit sponsor" src="images/sponsor-future.png" alt="フューチャー株式会社" />
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-6">
-                    <div class="row">
-                        <div class="col-xs-6">
-                            <img class="image fit sponsor" src="images/sponsor-localinovation.png" alt="株式会社ローカルイノベーション" />
-                        </div>
-                        <div class="col-xs-6">
-                            <img class="image fit sponsor" src="images/sponsor-slogan.png" alt="スローガン株式会社" />
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </section>
 
     <section id="schedule" class="main style2 dark fullscreen">
         <div class="content box style2">
@@ -137,12 +104,12 @@
             </header>
             <p>
               <ul>
-                <li>7月20日(木) 12:20~ at未定 </li>
-                <li>同日 16:30~ at未定 </li>
-                <li>7月25日(火) 12:20~ at未定 </li>
-                <li>同日 16:30~ at未定 </li>
-                <li>7月31日(月) 12:20~ at未定 </li>
-                <li>8月2日(水) 12:20~ at未定 </li>
+                <li>7月20日(木) 12:20~ at B101 </li>
+                <li>同日 16:30~ at B101 </li>
+                <li>7月25日(火) 12:20~ at C103 </li>
+                <li>同日 16:30~ at c103 </li>
+                <li>7月31日(月) 12:20~ at B101 </li>
+                <li>8月2日(水) 12:20~ at B101 </li>
               </ul>
               お昼の説明会は昼食を持参しての参加も可能です。<br>
               プログラミング等に興味がある方は是非ご参加ください！
@@ -227,6 +194,41 @@
             </p>
 
             <p>その他聞きたいことがあれば、気軽にご連絡ください。</p>
+        </div>
+    </section>
+
+    <!-- Sponsor -->
+    <section id="sponsor" class="main style3 primary">
+        <div class="content">
+            <header>
+                <h2>過去協賛企業</h2>
+                <p></p>
+            </header>
+
+            <!-- Icon  -->
+            <div class="row">
+                <div class="col-xs-12 col-sm-6">
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <img class="image fit sponsor" src="images/sponsor-brandingengineer.png" title="株式会社Branding Engineer" />
+                        </div>
+                        <div class="col-xs-6">
+                            <img class="image fit sponsor" src="images/sponsor-future.png" alt="フューチャー株式会社" />
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <img class="image fit sponsor" src="images/sponsor-localinovation.png" alt="株式会社ローカルイノベーション" />
+                        </div>
+                        <div class="col-xs-6">
+                            <img class="image fit sponsor" src="images/sponsor-slogan.png" alt="スローガン株式会社" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
 
@@ -344,7 +346,7 @@
                         ふみコード 代表兼忍者プログラマ
                     </p>
                     <p class="unei_content">
-                        旧J科を副総代で卒業後、単身シリコンバレーに渡り修行を積み帰ってきた忍者プログラマー。Japanameという訪日外国人向けビジネスを運営。大学院では「漢字の感じを可視化する」というテーマで研究中。「和 × IT 」で日本に新たなおもてなしネットワークを創るために、和風ベンチャー「ふみコード」を起業準備中。今一番得意な言語はJavaScript。 https://japana.me
+                        旧J科を副総代で卒業後、単身シリコンバレーに渡り修行を積み帰ってきた忍者プログラマー。Japanameという訪日外国人向けビジネスを運営。大学院では「漢字の感じを可視化する」というテーマで研究中。「和 × IT 」で日本に新たなおもてなしネットワークを創るために、和風ベンチャー「ふみコード」を起業。今一番得意な言語はJavaScript。 https://japana.me
                     </p>
                 </article>
             </div>
