--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section id="intro" class="main style1 dark fullscreen">
         <div class="content">
             <header>
-                <img src="images/CodePBLLogo2.png" class="logo" alt="">
+                <img src="images/CodePBLLogo.png" class="logo" alt="">
                 <div class="logo_box">
                     <img src="images/engineer_friends2.png" class="logo" title="ReZeroLogo" alt="" />
                 </div>
