石井さんへの引継ぎ

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <header>
                 <img src="images/CodePBLLogo.png" class="logo" alt="">
                 <div class="logo_box">
-                    <img src="images/engineer_friends2.png" class="logo" title="ReZeroLogo" alt="" />
+                    <img src="images/engineer_friends3.png" class="logo" title="ReZeroLogo" alt="" />
                 </div>
 
             </header>
@@ -56,19 +56,31 @@
     <section id="one" class="main style2 right dark fullscreen">
         <div class="content box style2">
             <header>
-                <h2>講義の一歩先へ</h2>
+                <h2>CodePBLとは</h2>
             </header>
                 <p>
-                講義でプログラミングをしただけの
-                学生の「なにか作ってみたい」という気持ちを応援します。
-                基礎的な内容から、最終的に作品を完成させるところまで
-                サポート。
+                <!--ここにCodePBLの説明-->
                 </p>
         </div>
     </section>
 
     <!-- Two -->
     <section id="two" class="main style2 left dark fullscreen">
+        <div class="content box style2">
+            <header>
+                <h2>講義の一歩先へ</h2>
+            </header>
+            <p>
+              講義でプログラミングをしただけの
+              学生の「なにか作ってみたい」という気持ちを応援します。
+              基礎的な内容から、最終的に作品を完成させるところまで
+              サポート。
+            </p>
+        </div>
+    </section>
+
+    <!-- Three -->
+    <section id="three" class="main style2 right dark fullscreen">
         <div class="content box style2">
             <header>
                 <h2>チーム開発</h2>
@@ -81,20 +93,18 @@
     </section>
 
      <!-- presen -->
-    <section id="presen" class="main style2 right dark fullscreen">
+    <section id="presen" class="main style2 left dark fullscreen">
         <div class="content box style2">
             <header>
                 <h2>成果発表会</h2>
             </header>
             <p>
-                企業の方を招いた成果発表会を行います。<br>
-                仲間たちと作り上げた作品をアピールし、<br>
-                現役のエンジニアたちからフィードバックをもらおう。
+              企業の方を招いた成果発表会を行います。<br>
+              仲間たちと作り上げた作品をアピールし、<br>
+              現役のエンジニアたちからフィードバックをもらおう。
             </p>
         </div>
     </section>
-
-
 
     <section id="schedule" class="main style2 dark fullscreen">
         <div class="content box style2">
