説明を追加した。フォームへのリンクを追加した。

--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
             <header>
                 <h2>CodePBLとは</h2>
             </header>
-                <p>
-                <!--ここにCodePBLの説明-->
-                </p>
+            <p>
+            <!--ここにCodePBLの説明-->
+            このイベントは、夏休み期間を使ったプログラミングスキルアップのためのPBL(Project Based Learning)です。 チームで自分たちの好きなプロダクトを作る喜びを体験できます! 授業で習っただけでは身につかない実践的な技術やプロジェクト推進力、インターンやハッカソンに踏み出せるような自信をつけ、この夏から君も「エンジニアフレンズ」に仲間入りしよう！
+
+            </p>
         </div>
     </section>
 
@@ -123,6 +125,8 @@
               </ul>
               お昼の説明会は昼食を持参しての参加も可能です。<br>
               プログラミング等に興味がある方は是非ご参加ください！
+
+              <a href="/form.html"> 説明会出席登録フォーム </a>
               <!-- 説明会で使用したスライド資料をアップロードしておりますので興味がある方は是非御覧ください！！ -->
             </p>
             <!-- <iframe src="//www.slideshare.net/slideshow/embed_code/key/3CXEV2OLe1wEHn" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/ueccodepbl/briefing-of-code-pbl-72211646" title="Briefing of code pbl" target="_blank">Briefing of code pbl</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/ueccodepbl">ueccodepbl</a></strong> </div> -->
