--- a/index.html
+++ b/index.html
@@ -111,22 +111,26 @@
     <section id="schedule" class="main style2 dark fullscreen">
         <div class="content box style2">
             <header>
-                <h2>説明会について</h2>
+                <h2>まずは説明会にお越しください!</h2>
                 <h4>説明会日程・場所</h4>
             </header>
-            <p>
+            <p style="text-align:left">
               <ul>
                 <li>7月20日(木) 12:20~ at B101 </li>
-                <li>同日 16:30~ at B101 </li>
+                <li>7月20日(木) 16:30~ at B101 </li>
                 <li>7月25日(火) 12:20~ at C103 </li>
-                <li>同日 16:30~ at c103 </li>
+                <li>7月25日(火) 16:30~ at c103 </li>
                 <li>7月31日(月) 12:20~ at B101 </li>
-                <li>8月2日(水) 12:20~ at B101 </li>
+                <li>8月 2日(水) 12:20~ at B101 </li>
               </ul>
-              お昼の説明会は昼食を持参しての参加も可能です。<br>
-              プログラミング等に興味がある方は是非ご参加ください！
+              <p>
+                お昼の説明会は昼食を持参しての参加も可能です。<br>
+                プログラミング等に興味がある方は是非ご参加ください！ 
+              </p>
+              
+              <p><a href="/pre-regi"> 説明会出席登録フォーム </a>
+              </p>
 
-              <a href="/form.html"> 説明会出席登録フォーム </a>
               <!-- 説明会で使用したスライド資料をアップロードしておりますので興味がある方は是非御覧ください！！ -->
             </p>
             <!-- <iframe src="//www.slideshare.net/slideshow/embed_code/key/3CXEV2OLe1wEHn" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/ueccodepbl/briefing-of-code-pbl-72211646" title="Briefing of code pbl" target="_blank">Briefing of code pbl</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/ueccodepbl">ueccodepbl</a></strong> </div> -->
