--- a/pre-regi/index.html
+++ b/pre-regi/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title> hoge </title>
+    <title> 説明会出席登録フォーム</title>
+    <meta charset="utf-8" />
     <meta http-equiv="refresh" content="0; URL='https://goo.gl/forms/5c2bmx6ar57ws4TA2'" />
 
   </head>
