来場時に記入をお願いした

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 プログラミング等に興味がある方は是非ご参加ください！ 
               </p>
               
-              <p><a href="/pre-regi"> 説明会出席登録フォーム </a>
+              <p><a href="/pre-regi"> 説明会出席登録フォーム (来場時に記入をお願いします)</a>
               </p>
 
               <!-- 説明会で使用したスライド資料をアップロードしておりますので興味がある方は是非御覧ください！！ -->
