--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
               プログラミング等に興味がある方は是非ご参加ください！
               <!-- 説明会で使用したスライド資料をアップロードしておりますので興味がある方は是非御覧ください！！ -->
             </p>
+            <img src="images/poster.png" class="poster" alt="">
             <!-- <iframe src="//www.slideshare.net/slideshow/embed_code/key/3CXEV2OLe1wEHn" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/ueccodepbl/briefing-of-code-pbl-72211646" title="Briefing of code pbl" target="_blank">Briefing of code pbl</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/ueccodepbl">ueccodepbl</a></strong> </div> -->
         </div>
     </section>
@@ -216,24 +217,46 @@
             </header>
 
             <!-- Icon  -->
+            <!-- 一列目 -->
             <div class="row">
                 <div class="col-xs-12 col-sm-6">
                     <div class="row">
                         <div class="col-xs-6">
-                            <img class="image fit sponsor" src="images/sponsor-brandingengineer.png" title="株式会社Branding Engineer" />
+                            <img class="image fit sponsor" src="images/sponsor-brandingengineer.png" title="株式会社Branding Engineer" alt="株式会社Branding Engineer" />
                         </div>
                         <div class="col-xs-6">
-                            <img class="image fit sponsor" src="images/sponsor-future.png" alt="フューチャー株式会社" />
+                            <img class="image fit sponsor" src="images/sponsor-future.png" title="フューチャー株式会社" alt="フューチャー株式会社" />
                         </div>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6">
                     <div class="row">
                         <div class="col-xs-6">
-                            <img class="image fit sponsor" src="images/sponsor-localinovation.png" alt="株式会社ローカルイノベーション" />
+                            <img class="image fit sponsor" src="images/sponsor-localinovation.png" title="株式会社ローカルイノベーション" alt="株式会社ローカルイノベーション" />
                         </div>
                         <div class="col-xs-6">
-                            <img class="image fit sponsor" src="images/sponsor-slogan.png" alt="スローガン株式会社" />
+                            <img class="image fit sponsor" src="images/sponsor-slogan.png" title="スローガン株式会社" alt="スローガン株式会社" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 二列目 -->
+            <div class="row">
+                <div class="col-xs-12 col-sm-6">
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <img class="image fit sponsor" src="images/sponsor-revamp.png" title="株式会社リヴァンプ" alt="株式会社リヴァンプ" />
+                        </div>
+                        <div class="col-xs-6">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <div class="row">
+                        <div class="col-xs-6">
+                        </div>
+                        <div class="col-xs-6">
                         </div>
                     </div>
                 </div>
