--- a/index.html
+++ b/index.html
@@ -111,10 +111,26 @@
     <section id="schedule" class="main style2 dark fullscreen">
         <div class="content box style2">
             <header>
+              <h2>説明会のスライド</h2>
+              <iframe src="//www.slideshare.net/slideshow/embed_code/key/lbvibeJ1yEYAQB" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen>
+              </iframe>
+              <div style="margin-bottom:5px">
+                <strong>
+                  <a href="//www.slideshare.net/icymasa/code-pbl3-78525455" title="Code pbl3説明会資料 アップロード版" target="_blank">Code pbl3説明会資料 アップロード版
+                  </a>
+                </strong> 
+                from <strong>
+                  <a target="_blank" href="https://www.slideshare.net/icymasa">Masafumi Ishii
+                  </a>
+                </strong>
+              </div>
+              <!--
                 <h2>まずは説明会にお越しください!</h2>
                 <h4>説明会日程・場所</h4>
+              -->
             </header>
             <p style="text-align:left">
+              <!--
               <ul>
                 <li>7月20日(木) 12:20~ at B101 </li>
                 <li>7月20日(木) 16:30~ at B101 </li>
@@ -125,10 +141,12 @@
               </ul>
               <p>
                 お昼の説明会は昼食を持参しての参加も可能です。<br>
-                プログラミング等に興味がある方は是非ご参加ください！ 
+                プログラミング等に興味がある方は是非ご参加ください！
               </p>
-              
-              <p><a href="/pre-regi"> 説明会出席登録フォーム (来場時に記入をお願いします)</a>
+            -->
+
+              <h2>本登録はここから!!</h2>
+              <p><a href="https://goo.gl/forms/CmnwshsS2xQQ4laO2" target="_blank"> codePBL本登録フォーム</a>
               </p>
 
               <!-- 説明会で使用したスライド資料をアップロードしておりますので興味がある方は是非御覧ください！！ -->
